--- a/index.html
+++ b/index.html
@@ -5,6 +5,17 @@
     <link href="styles.css" rel="stylesheet" />
   </head>
   <body>
+    <div id="header">
+      <div class="contact" id="phone">
+        <a href="tel:6504298711">(650) 429-8711</a>
+      </div>
+      <div class="contact" id="email">
+        <a href="contact@bankjoy.com">Email Us</a>
+      </div>
+    </div>
     <div id="title"></div>
+    <p id="slogan">Mobile Banking for Credit Unions</p>
+    <p id="content">Schedule a demo today and deliver modern mobile banking to your members by December 16th</p>
+    <a id="button" href="https://bankjoy.com/#signup">Schedule a demo</a>
   </body>
 </html>
