--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-US">
   <head>
+    <meta charset="UTF-8">
     <title>Bankjoy</title>
     <link href="styles.css" rel="stylesheet" />
   </head>
