Positioned iPhone images. #11

--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
         <a class="button" href="https://bankjoy.com/#signup">Schedule a demo</a>
       </div>
       <div id="phones">
-        <img src="images/phone-left.png">
-        <img src="images/phone-right.png">
-        <img src="images/phone-center.png">
+        <img class="phone" id="phone-left" src="images/phone-left.png">
+        <img class="phone" id="phone-center" src="images/phone-center.png">
+        <img class="phone" id="phone-right" src="images/phone-right.png">
       </div>
     </div>
   </body>
