--- a/index.html
+++ b/index.html
@@ -3,16 +3,17 @@
   <head>
     <meta charset="UTF-8">
     <title>Bankjoy</title>
-    <link href="styles.css" rel="stylesheet" />
+    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="https://cdn.linearicons.com/free/1.0.0/icon-font.min.css">
   </head>
   <body>
     <div id="container">
-      <div id="header">
-        <div class="contact" id="phone">
-          <a href="tel:6504298711">(650) 429-8711</a>
+      <div id="contact">
+        <div class="contact-link">
+          <a href="tel:6504298711"><span class="lnr lnr-phone-handset"></span> (650) 429-8711</a>
         </div>
-        <div class="contact" id="email">
-          <a href="contact@bankjoy.com">Email Us</a>
+        <div class="contact-link">
+          <a href="contact@bankjoy.com"><span class="lnr lnr-envelope"></span> Email Us</a>
         </div>
       </div>
       <div id="title"></div>
