Fixed image sources. #12

--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
         <a class="button" href="https://bankjoy.com/#signup">Schedule a demo</a>
       </div>
       <div id="phones">
-        <img class="phone" id="phone-left" src="images/phone-left.png">
-        <img class="phone" id="phone-center" src="images/phone-center.png">
-        <img class="phone" id="phone-right" src="images/phone-right.png">
+        <img class="phone" id="phone-left" src="https://bankjoy.com/assets/images/phones/header-phone-left@2x.png">
+        <img class="phone" id="phone-center" src="https://bankjoy.com/assets/images/phones/header-phone-center@2x.png">
+        <img class="phone" id="phone-right" src="https://bankjoy.com/assets/images/phones/header-phone-right@2x.png">
       </div>
     </div>
   </body>
