Added shadows to center phone. #18

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         <img class="phone" id="phone-left" src="https://bankjoy.com/assets/images/phones/header-phone-left@2x.png">
         <img class="phone" id="phone-center" src="https://bankjoy.com/assets/images/phones/header-phone-center@2x.png">
         <img class="phone" id="phone-right" src="https://bankjoy.com/assets/images/phones/header-phone-right@2x.png">
+        <div id="shadow"></div>
       </div>
     </div>
   </body>
