--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Bankjoy</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdn.linearicons.com/free/1.0.0/icon-font.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,400">
   </head>
   <body>
     <div id="container">
