--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </div>
       </div>
       <div id="title"></div>
-      <p id="slogan">Mobile Banking for Credit Unions</p>
+      <h1 id="slogan">Mobile Banking for Credit Unions</h1>
       <p id="content">Schedule a demo today and deliver modern mobile banking to your members by December 16th</p>
       <div class="button">
         <a class="button" href="https://bankjoy.com/#signup">Schedule a demo</a>
