Displays current date. #26

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       </div>
       <div id="title"></div>
       <h1 id="slogan">Mobile Banking for Credit Unions</h1>
-      <p id="content">Schedule a demo today and deliver modern mobile banking to your members by December 16th</p>
+      <p id="content">Schedule a demo today and deliver modern mobile banking to your members by <script src="date.js"></script></p>
       <div class="button">
         <a class="button" href="https://bankjoy.com/#signup">Schedule a demo</a>
       </div>
