Added pulse effect to button. #28

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <h1 id="slogan">Mobile Banking for Credit Unions</h1>
       <p id="content">Schedule a demo today and deliver modern mobile banking to your members by <script src="date.js"></script></p>
       <div class="button">
-        <a class="button" href="https://bankjoy.com/#signup">Schedule a demo</a>
+        <a class="button hvr-pop" href="https://bankjoy.com/#signup">Schedule a demo</a>
       </div>
       <div id="phones">
         <img class="phone" id="phone-left" src="https://bankjoy.com/assets/images/phones/header-phone-left@2x.png">
